# Chromapath

./: LICENSE  README.md  README_EN.md  README_ZH.md  main.py  pyproject.toml  requirements.txt  setup.py
color_analyzer/: __init__.py
color_analyzer/core/: __init__.py  clustering.py  color_extractor.py  cooccurrence.py  genetic.py  image_processor.py
color_analyzer/ui/: __init__.py  color_extractor.py  cooccurrence_analyzer.py  genetic_optimizer.py  main_window.py  network_viewer.py  palette_generator.py
color_analyzer/visualization/: __init__.py  color_card.py  network_plot.py
